--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Weather App</title>
+  <title>Weather App</title> 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
 </head>
 <body>
 
@@ -65,7 +71,9 @@
 
 
   <!---Recent Queries -->
+    <h4>Recent Searches</h4>
   <div class="row recent-queries">
+
     <div class="col-xs-2 col-sm-2" id= "recent-template">
       <h3><span class="recent-name"></span>  <span class="glyphicon glyphicon-remove remove-recent"></span></h3>
       <h5>Temp: <span class="recent-temp">32</span></h5>
@@ -138,9 +146,5 @@
     </div> <!--end of widget template-->
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
   </body>
   </html>
