--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
 
   <!---Recent Queries -->
-    <h4>Recent Searches</h4>
+  <div class = "row recent-quer-title"><h4>Recent Searches</h4> </div>
+   
   <div class="row recent-queries">
 
     <div class="col-xs-2 col-sm-2" id= "recent-template">
